# JobFindEasy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: sources.yaml
config/skills/dheeraj-cover-letter-generator/: cover-letter-skill.md
config/skills/dheeraj-resume-generator/: SKILL.md
config/skills/dheeraj-resume-generator/references/: profile-em.md  profile-ic.md  profile.md  template.md
scripts/: bulk_generate_strong_fits.py  run_daily.sh
src/: cli.py  db.py  llm.py  models.py  notify.py  state.py  status.py  utils.py
src/apply/: __init__.py  prompt.py
src/cover_letter/: __init__.py  docx_builder.py  pipeline.py  prompts.py  template.py
src/enrichment/: ats_match.py  hr_score.py  llm_scorer.py  pipeline.py  prefilter.py  sponsorship.py
src/generate/: __init__.py  cover_letter.py  resume.py
src/resume/: __init__.py  docx_builder.py  pipeline.py  profile.py  prompts.py  template.py
src/scrapers/: aijobs.py  ashby.py  base.py  greenhouse.py  hackernews.py  jobspresso.py  lever.py  recruitee.py  registry.py  remotive.py  runner.py  smartrecruiters.py  url_inject.py  workable.py  working_nomads.py  ycombinator.py
src/scrapers/_archived/: linkedin.py.bak
tests/: conftest.py  test_inject_csv.py  test_smoke.py
ui/: app.py
web/: app.py  app.py.bak
web/static/: app.css  app.js  grid.js
web/templates/: base.html  index.html
web/templates/partials/: artifacts.html  autoscrape.html  badges.html  detail.html  generations.html  table.html
